# DiorDMRCheck

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  README.md  entrypoint.sh  eval.py  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: adjudicator.py  auth.py  config.py  db.py  deck.py  effreport.py  i18n.py  main.py  matcher.py  normalize.py  parsers.py  perimeter.py  report.py  resolver.py  reverse_audit.py  runner.py  schema_map.py  web.py
app/auth/: routes.py  service.py  throttle.py
app/core/: db.py  llm.py  migrations.py  textnorm.py  token_store.py  uploads.py  xlsx.py
app/efficiency/: analysis.py  deck.py  routes.py
app/i18n/: __init__.py
app/reconciler/: adjudicator.py  domain.py  export.py  links.py  name_match.py  parsers.py  perimeter.py  pipeline.py  presentation.py  reverse_audit.py  routes.py  runs.py
app/remap/: mapper.py  registry.py  routes.py  service.py
app/templates/: _error_panel.html  _progress.html  _results.html  base.html  efficiency.html  efficiency_report.html  error.html  index.html  login.html  preview.html  remap_audit.html  (+3 more)
docs/: DMR_Export_Template.xlsx  DMR_Reconciler_File_Rubric.docx  PLOG_Tracker_Template.xlsx  REORGANIZATION.md
tests/: conftest.py  fixtures.py  test_auth.py  test_efficiency_web.py  test_effreport.py  test_evaluate.py  test_generators.py  test_guide.py  test_matcher.py  test_migration_snapshots.py  test_normalize.py  test_parsers.py  test_perimeter.py  test_regressions.py  test_report.py  test_schema_map.py
tools/: evaluate.py  make_demo_assets.py  make_rubric.js  make_templates.py  package-lock.json  package.json
(+44 files in other folders)
